--- a/csound.spec.in
+++ b/csound.spec.in
@@ -38,6 +38,7 @@ rm -rf %{buildroot}
 
 %files
 %defattr (-, root, root)
+%doc AUTHORS ChangeLog COPYING INSTALL NEWS README
 %{_bindir}/*
 %{_libdir}/*
 %{_includedir}/*
