--- a/configure.in
+++ b/configure.in
@@ -3,6 +3,7 @@
 
 AC_PREREQ(2.57)
 AC_INIT(Csound, 4.24, csound-bug@cs.bath.ac.uk)
+AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([Top/main.c])
 AC_CONFIG_HEADER([H/config.h])
 AC_CANONICAL_SYSTEM
@@ -10,8 +11,17 @@ LDFLAGS="-L/usr/lib -L/usr/X11R6/lib -L/usr/local/lib"
 
 # Checks for programs.
 AC_PROG_CXX
-#AC_PROG_YACC
+dnl Add warning when using G++
+if test "X$GXX" = Xyes ; then
+  CXXFLAGS="$CXXFLAGS -Wall"
+fi
 AC_PROG_CC
+dnl Add warning when using GGG
+if test "X$GCC" = Xyes ; then
+  CFLAGS="$CFLAGS -Wall"
+fi
+AM_PROG_CC_STDC
+#AC_PROG_YACC
 #AC_PROG_LEX
 #AC_PROG_INSTALL
 #AC_PROG_MAKE_SET
